--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@elastic/elasticsearch": "^8.10.0",
 		"date-fns": "^2.30.0",
+		"lucide-svelte": "^0.294.0",
 		"xml2js": "^0.6.2"
 	}
 }
